--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -357,8 +357,8 @@ a:hover {
     color: #0077e2;
 }
 
-#myFooter .google:hover {
-    color: #ef1a1a;
+#myFooter .github:hover {
+    color: black;
 }
 
 #myFooter .twitter:hover {
