--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -11,14 +11,14 @@
                 <div class="col-sm myCols">
                     <h5>Cinema</h5>
                     <ul>
-                        <li><a th:href="@{/faq}">FAQ</a></li>
+                        <li><a th:href="@{/about-us}">About Us</a></li>
                         <li><a th:href="@{/contact}">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-sm myCols social-networks">
                     <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://github.com/OnescuRadu/BioTrio" class="github"><i class="fab fa-github"></i></a>
                     <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
                 </div>
                 <div class="col-sm myCols">
                     <h5>Movies</h5>
