--- a/src/main/resources/templates/control-panel.html
+++ b/src/main/resources/templates/control-panel.html
@@ -72,7 +72,7 @@
                         <hr>
                         <div class="manage-btn">
                             <a th:href="@{/bookings}">Manage Bookings</a>
-                            <a th:href="@{/add-booking}">Add Booking</a>
+                            <a th:href="@{/movies}">Add Booking</a>
                         </div>
                     </div>
                 </div>
