Check if Movie Plan overlaps & Small Mistakes

--- a/src/main/resources/templates/control-panel.html
+++ b/src/main/resources/templates/control-panel.html
@@ -20,7 +20,7 @@
     <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css"/>
 
     <!-- Page Title -->
-    <title>Bio Trio Cinema | Home</title>
+    <title>Bio Trio Cinema | Control Panel</title>
 </head>
 <body>
 <div class="d-flex flex-column sticky-footer-wrapper">
