--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -56,7 +56,7 @@
                             <div class="col-md-6" style="margin-bottom: 2%">
                                 <div class="md-form mb-0">
                                     <label>Password</label>
-                                    <input type="text" id="password" name="password" th:field="${newUser.password}" class="form-control mb-4">
+                                    <input type="password" id="password" name="password" th:field="${newUser.password}" class="form-control mb-4">
                                 </div>
                             </div>
                             <!--Grid column-->
