--- a/src/main/resources/templates/mails/booking-email.html
+++ b/src/main/resources/templates/mails/booking-email.html
@@ -6,6 +6,7 @@
     <title>BioTrio Booking Confirmation</title>
 </head>
 <body>
+Your booking has been successfully made. <br>
 Movie: <span th:text="${booking.moviePlan.movie.type} ? ${booking.moviePlan.movie.movieDetails.name} + ' : 3D' : ${booking.moviePlan.movie.movieDetails.name} + ' : 2D'">Movie</span><br>
 Date & Time: <span th:text="${booking.moviePlan.date_time}">Date & Time</span><br>
 Theater Room: <span th:text="${booking.moviePlan.theaterRoom.name}">Theater Room</span><br>
