Added find booking for the STAFF, Added comments for the repositories and for the booking controller

--- a/src/main/resources/templates/control-panel.html
+++ b/src/main/resources/templates/control-panel.html
@@ -73,6 +73,7 @@
                         <div class="manage-btn">
                             <a th:href="@{/bookings}">Manage Bookings</a>
                             <a th:href="@{/movies}">Add Booking</a>
+                            <a th:href="@{/find-booking}">Find Booking</a>
                         </div>
                     </div>
                 </div>
