--- a/src/main/resources/templates/view-booking-cp.html
+++ b/src/main/resources/templates/view-booking-cp.html
@@ -20,49 +20,62 @@
     <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css"/>
 
     <!-- Page Title -->
-    <title>Bio Trio Cinema | Find Booking</title>
+    <title>Bio Trio Cinema | Bookings</title>
 </head>
-<body>
 <div class="d-flex flex-column sticky-footer-wrapper">
     <!--Insert header fragment-->
     <div th:insert="~{/fragments/header :: header}"></div>
-
-    <div class="container flex-fill">
+    <div class="container-fluid flex-fill">
         <!--Section: Contact v.2-->
         <section class="mb-4">
 
             <!--Section heading-->
-            <h2 class="h1-responsive font-weight-bold text-center my-4">Booking</h2>
+            <h2 class="h1-responsive font-weight-bold text-center my-4">Bookings</h2>
             <div class="row contact_form">
 
                 <!--Grid column-->
                 <div class="col-md-12 mb-md-0 mb-5">
-                    <form th:action="@{'/view-booking'}" method="post">
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th scope="col">Movie Name</th>
+                            <th scope="col">Date & Time</th>
+                            <th scope="col">Duration</th>
+                            <th scope="col">Seats</th>
 
-                        <!--Grid row-->
-                        <div class="row">
+                            <th scope="col">Theater Room</th>
+                            <th scope="col">Phone Number</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Confirmation Code</th>
+                            <th scope="col">Total Price</th>
+                            <th scope="col">Paid</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td th:text="${booking.moviePlan.movie.type} ? ${booking.moviePlan.movie.movieDetails.name} + ' : 3D' : ${booking.moviePlan.movie.movieDetails.name} + ' : 2D'"></td>
+                            <td th:text="${booking.moviePlan.date_time}"></td>
+                            <td th:text="${booking.moviePlan.movie.movieDetails.duration_minutes}"></td>
+                            <td>
+            <span th:each="ticket : ${booking.ticketList}" th:text="${ticket.seat_number}" style="display:block">
+            </span>
+                            </td>
+                            <td th:text="${booking.moviePlan.theaterRoom.name}"></td>
+                            <td th:text="${booking.phone_number}"></td>
+                            <td th:text="${booking.email}"></td>
+                            <td th:text="${booking.confirmation_code}"></td>
+                            <td th:text="${booking.totalPrice}"></td>
+                            <td th:text="${booking.paid} ? 'YES' : 'NO'"></td>
 
-
-                            <!--Grid column-->
-                            <div class="col-md-12" style="margin-bottom: 2%">
-                                <div class="md-form mb-0">
-                                    <label for="confirmation-code" class="">Confirmation Code</label>
-                                    <input type="text" id="confirmation-code" name="confirmation-code" class="form-control">
-                                </div>
-                            </div>
-                            <!--Grid column-->
-
-                        </div>
-                        <!--Grid row-->
-
-
-                        <div class="text-center">
-                            <button type="submit" class="empty-button btn btn-default">
-                                Search
-                            </button>
-                        </div>
-                    </form>
-
+                            <td>
+                                <!-- Button edit -->
+                                <a th:href="'/edit-booking/' + ${booking.booking_id}" class="btn empty-button">Edit</a>
+                                <!-- Button delete -->
+                                <a th:href="'/delete-booking/' + ${booking.booking_id}" class="btn btn-danger edit-delete">Delete</a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <!--Grid column-->
             </div>
@@ -70,6 +83,7 @@
         </section>
         <!--Section: Contact v.2-->
     </div>
+
     <!--Insert footer fragment-->
     <div th:insert="~{/fragments/footer :: footer}"></div>
 </div>
@@ -80,11 +94,5 @@
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script>var dateControl = document.querySelector('input[type="date"]');
-dateControl.value = date.now;</script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css"/>
 </body>
 </html>
