Comments and styling details
Comments for MovieRepository and MovieController
Checkbox solved with th:field for add-movie-page and edit-movie-page
Style edit-bookings
Style add-movie-page2

--- a/src/main/resources/templates/add-movie-page.html
+++ b/src/main/resources/templates/add-movie-page.html
@@ -129,7 +129,7 @@
 
                                 <label class="switch" for="enabled">
                                     <!--<input th:="${movieForm.type}" type="checkbox">-->
-                                    <input type="checkbox" id="enabled" name="a" value="3D" class="form-control mb-4 switch">
+                                    <input type="checkbox" id="enabled" name="a" value="3D" class="form-control mb-4 switch" th:field="${movieForm.type}">
                                     <span class="slider round"></span>
                                 </label>
                             </div>
