--- a/src/main/resources/templates/edit-movie-page.html
+++ b/src/main/resources/templates/edit-movie-page.html
@@ -123,18 +123,15 @@
                         <!--Grid column-->
 
                         <!--Grid column-->
-                        <div th:switch="${movieForm.type}" class="col-md-6" style="margin-bottom: 2%">
-                            <!--<label for="checkbox">3D:</label>-->
-                            <h6>3D:</h6>
 
-                            <label th:case="false" class="switch">
-                                <input type="checkbox" id="enabled" name="a" value="3D" class="form-control mb-4 switch">
-                                <span class="slider round"></span>
-                            </label>
-                            <label th:case="true" class="switch">
-                                <input type="checkbox" id="unenabled" name="a" value="3D" class="form-control mb-4 switch" checked>
-                                <span class="slider round"></span>
-                            </label>
+                        <div class="col-md-6" style="margin-bottom: 2%">
+                            <div class="md-form mb-0">
+                                <h6>3D:</h6>
+                                <label class="switch">
+                                    <input th:field="${movieForm.type}" type="checkbox" id="enabled" name="a" value="3D" class="form-control mb-4 switch">
+                                    <span class="slider round"></span>
+                                </label>
+                            </div>
                         </div>
                         <!--Grid column-->
                     </div>
