--- a/src/main/resources/templates/select-seats.html
+++ b/src/main/resources/templates/select-seats.html
@@ -41,32 +41,22 @@
                     <div class="row justify-content-center">
                         <div class="screen"></div>
                     </div>
-<!--                    <div class="row justify-content-center">
-                        &lt;!&ndash;<div class="col-md-1"></div>&ndash;&gt;
-                        <div th:each="i: ${#numbers.sequence(1, newBooking.moviePlan.theaterRoom.rows_no)}">
-                            <div class="span3 pretty p-default p-curve p-toggle" th:each="j: ${#numbers.sequence(1, newBooking.moviePlan.theaterRoom.columns_no)}" style="padding: 10px;">
-                                <div class="col-md-6">
-                                    <input class="seat" type="checkbox" th:name="${i} + '-' + ${j}" th:disabled="${reservedSeats[__${i-1}__][__${j-1}__]}" th:field="${newBooking.seatList}"
-                                           th:value="${i} + '-' + ${j}">
-                                    <br>
-                                </div>
-                            </div>
-                            <br>
-                        </div>
-                    </div>-->
+
+                    <!--SEAT MAP-->
                     <div class="justify-content-center">
                     <table border="0" class="seats-table">
-<!--                        <thead>
-                        <tr>
-                            <th>Col 1</th>
-                            <th>Col 2</th>
-                            <th>Col 3</th>
-                            <th>Col 4</th>
-                        </tr>
-                        </thead>-->
                         <tbody>
+                        <!--Iterates through the number of theater room's rows-->
                         <tr th:each="i: ${#numbers.sequence(1, newBooking.moviePlan.theaterRoom.rows_no)}">
+                            <!--Iterates through the number of theater room's columns-->
                             <td th:each="j: ${#numbers.sequence(1, newBooking.moviePlan.theaterRoom.columns_no)}">
+                                <!--
+                                Input Checkbox represents a Seat
+                                Checkbox value depends on it's position
+                                (Eg: Seat that is located on the 2nd row and on the 3rd column will have the value '2-3')
+                                Is disabled if on his position in the 2D array it is the value true
+                                (Eg: If reservedSeats[5][6] == true then the seat that is located on the 5th row and on the 6h column will be disabled)
+                                -->
                                 <input class="seat" type="checkbox" th:name="${i} + '-' + ${j}" th:disabled="${reservedSeats[__${i-1}__][__${j-1}__]}" th:field="${newBooking.seatList}"
                                        th:value="${i} + '-' + ${j}">
                             </td>
