--- a/src/main/resources/templates/see-movies.html
+++ b/src/main/resources/templates/see-movies.html
@@ -76,7 +76,7 @@
                             <td>
                                 <img th:src="${movie.movieDetails.poster}" style="width: 200px; height: 300px;">
                             </td>
-                            <td class="col-name" th:text="${movie.movieDetails.name}">Name</td>
+                            <td class="col-name" th:text="${movie.movieDetails.name}" >Name</td>
                             <td class="col-name" th:text="${movie.movieDetails.genre}">Genre</td>
                             <td class="col-name" th:text="${movie.movieDetails.release_date}">Release date</td>
                             <td class="col-name" th:text="${movie.movieDetails.duration_minutes}">Duration minutes</td>
@@ -110,8 +110,12 @@
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script>var dateControl = document.querySelector('input[type="date"]');
-dateControl.value = '2017-06-01';</script>
+
+<script>
+    var dateControl = document.querySelector('input[type="date"]');
+dateControl.value = '2017-06-01';
+
+</script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
