--- a/src/main/resources/templates/booking-confirmation.html
+++ b/src/main/resources/templates/booking-confirmation.html
@@ -33,7 +33,7 @@
                     <div class="icon">
                         <div class="image"><i class="fa fa-thumbs-o-up"></i></div>
                         <div class="info">
-                            <h3 class="title">Your booking has been made</h3>
+                            <h3 class="title">Your booking has been successfully made.</h3>
                             <p>
                                 Movie: <span
                                     th:text="${booking.moviePlan.movie.type} ? ${booking.moviePlan.movie.movieDetails.name} + ' : 3D' : ${booking.moviePlan.movie.movieDetails.name} + ' : 2D'">Movie</span><br>
